[tool.poetry]
name = "ObjLog"
version = "2.1.1"
description = "Logging, Objectified."
authors = ["Kokonico <kokonico@duck.com>"]
readme = "README.md"
license = "Zlib"
repository = "https://github.com/Kokonico/ObjLog"
keywords = ["logging", "object", "objectified", "log", "logger", "loggers", "OOP", "python", "python3", "python3.10", "python3.11", "python3.12"]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
