[project]
name = "ObjLog"
version = "3.0.2"
description = "Logging, Objectified."
authors = [
    { name = "Kokonico", email = "kokonico@duck.com" }
]
readme = "README.md"
license = "Zlib"
keywords = ["logging", "object", "objectified", "log", "logger", "loggers", "OOP", "python", "python3", "python3.10", "python3.11", "python3.12"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"

[project.urls]
documentation = "https://objlog.rtfd.io/"
repository = "https://github.com/Kokonico/ObjLog"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
